# mldetection-jetson-nano

./: .gitignore  README.md  pyproject.toml  requirements.txt
model_files/: best_int8_dynamic.onnx  data.yaml
src/: app-pc.py  app.py  app_orig.py  inference_jetson.py
