[project]
name = "mldetection-jetson-nano"
version = "0.1.0"
description = ""
authors = [
    {name = "erwincarlogonzales",email = "erwincarlogonzales@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ultralytics (>=8.3.147,<9.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "supervision (>=0.25.1,<0.26.0)",
    "onnxruntime (>=1.22.0,<2.0.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
